Update lists at 20241130-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -14,7 +14,6 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
-allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -619,7 +618,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.91;
+allow 195.47.238.90;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -957,6 +956,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1544,7 +1544,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
@@ -1571,6 +1571,7 @@ allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
+allow 2a0f:85c1:356:1ea8::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:596c::1;
 allow 2a0f:85c1:356:5da3::1;
@@ -1667,6 +1668,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1757,6 +1759,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1795,6 +1798,7 @@ allow 62.182.84.146;
 allow 65.87.7.42;
 allow 66.146.193.33;
 allow 66.220.242.222;
+allow 66.78.40.118;
 allow 66.78.40.182;
 allow 66.78.40.65;
 allow 67.219.109.141;
