--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -661,7 +661,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
@@ -688,6 +688,7 @@ deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
+deny 2a0f:85c1:356:1ea8::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:596c::1;
 deny 2a0f:85c1:356:5da3::1;
