--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -661,7 +661,7 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
@@ -688,6 +688,7 @@ set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:e701:1198::1;
+set_real_ip_from 2a0f:85c1:356:1ea8::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:596c::1;
 set_real_ip_from 2a0f:85c1:356:5da3::1;
