--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -14,6 +14,7 @@ deny 104.167.242.117;
 deny 104.167.242.118;
 deny 104.192.1.138;
 deny 104.192.3.74;
+deny 104.219.232.126;
 deny 104.219.236.100;
 deny 104.244.72.115;
 deny 104.244.72.132;
@@ -617,8 +618,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.89;
 deny 195.47.238.90;
+deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1544,8 +1545,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
-deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
