--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -189,6 +189,7 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.227.215.50;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.97.114.182;
 allow 176.97.114.202;
 allow 178.17.170.144;
@@ -659,7 +660,6 @@ allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:800:1f70::;
-allow 2001:41d0:801:2000::2b97;
 allow 2001:41d0:801:2000::354d;
 allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
@@ -1274,6 +1274,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
@@ -1749,7 +1750,6 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.33.188;
 allow 5.181.80.107;
-allow 51.89.138.51;
 allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.95.34;
