--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -13,7 +13,6 @@ deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:800:1f70::;
-deny 2001:41d0:801:2000::2b97;
 deny 2001:41d0:801:2000::354d;
 deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
@@ -393,6 +392,7 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
