--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -105,6 +105,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 112.119.81.217;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
@@ -136,7 +137,6 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
-allow 154.213.185.133;
 allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
@@ -945,6 +945,7 @@ allow 23.137.248.152;
 allow 23.137.249.195;
 allow 23.137.250.83;
 allow 23.137.253.108;
+allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
@@ -1013,6 +1014,7 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:30d2::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
@@ -1284,6 +1286,7 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
+allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1333,9 +1336,12 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
@@ -1346,7 +1352,6 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
-allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1666,6 +1671,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1701,6 +1707,7 @@ allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.149.204.78;
+allow 45.151.122.34;
 allow 45.59.112.103;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1735,6 +1742,7 @@ allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.8.68.175;
 allow 47.243.99.161;
 allow 47.76.187.86;
 allow 49.51.172.215;
@@ -1754,10 +1762,14 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
+allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.218;
