Update lists at 20241201-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -35,6 +35,7 @@ allow 104.244.79.50;
 allow 104.244.79.61;
 allow 104.254.90.187;
 allow 107.172.31.218;
+allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.174.34.30;
 allow 107.189.10.175;
@@ -192,6 +193,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.182;
 allow 176.97.114.202;
+allow 177.149.142.154;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -218,7 +220,6 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 179.55.70.180;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -945,8 +946,8 @@ allow 23.137.248.152;
 allow 23.137.249.195;
 allow 23.137.250.83;
 allow 23.137.253.108;
+allow 23.137.253.109;
 allow 23.137.253.110;
-allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
@@ -1014,9 +1015,9 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:30d2::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -1343,6 +1344,7 @@ allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
+allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
@@ -1742,7 +1744,6 @@ allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.8.68.175;
 allow 47.243.99.161;
 allow 47.76.187.86;
 allow 49.51.172.215;
@@ -1772,7 +1773,10 @@ allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
+allow 5.255.118.183;
 allow 5.255.118.218;
+allow 5.255.120.205;
+allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.125.196;
