--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -132,9 +132,9 @@ deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:30d2::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
-deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
@@ -460,6 +460,7 @@ deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:c6c3::1;
+deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
