--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -106,7 +106,6 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
-deny 112.119.81.217;
 deny 114.35.245.150;
 deny 118.163.74.160;
 deny 121.127.37.151;
@@ -948,10 +947,10 @@ deny 23.137.250.83;
 deny 23.137.253.108;
 deny 23.137.253.109;
 deny 23.137.253.110;
+deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
-deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
@@ -1018,6 +1017,7 @@ deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
+deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
@@ -1604,7 +1604,6 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:5940:c826::2;
 deny 2a12:a800:1:1:194:26:192:161;
@@ -1890,7 +1889,6 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.210.59.188;
 deny 91.219.236.101;
-deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.223.2.140;
