--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -106,7 +106,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 112.119.81.217;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
@@ -948,10 +947,10 @@ allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
+allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
-allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1018,6 +1017,7 @@ allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
+allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -1604,7 +1604,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:c800:1:9cc6::1;
-allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
@@ -1890,7 +1889,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.188;
 allow 91.219.236.101;
-allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.223.2.140;
