--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -137,9 +137,6 @@ allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
 allow 154.16.116.61;
-allow 154.213.185.165;
-allow 154.213.185.183;
-allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.187.66;
 allow 154.213.187.98;
@@ -619,7 +616,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.90;
-allow 195.47.238.93;
+allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -879,7 +876,6 @@ allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -951,6 +947,7 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1355,9 +1352,6 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:655b::1;
-allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1550,9 +1544,12 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1666,6 +1663,7 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 38.97.116.244;
+allow 42.2.109.147;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1709,7 +1707,6 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.149.204.78;
 allow 45.151.122.34;
-allow 45.59.112.103;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1718,6 +1715,7 @@ allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
+allow 45.78.44.215;
 allow 45.79.144.222;
 allow 45.80.158.205;
 allow 45.80.158.23;
@@ -1921,7 +1919,6 @@ allow 94.230.208.148;
 allow 94.232.43.221;
 allow 94.72.103.33;
 allow 94.72.98.8;
-allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
