--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -472,9 +472,6 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:655b::1;
-deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
@@ -667,9 +664,12 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
+deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
+deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
