Update lists at 20241201-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -136,6 +136,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
+allow 152.53.133.14;
 allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -176,6 +177,7 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
+allow 172.104.182.84;
 allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.234.228.174;
@@ -620,7 +622,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -954,7 +956,6 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1390,6 +1391,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
+allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0a:c801:1:5::57;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:f4c0:16c:10::1;
@@ -1552,9 +1554,9 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
@@ -1672,13 +1674,11 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 38.97.116.244;
-allow 42.2.109.147;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
