--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -505,6 +505,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:3840:8078:22:0:504e:16da:1337;
+deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0a:c801:1:5::57;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:f4c0:16c:10::1;
@@ -667,9 +668,9 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
