--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -529,7 +529,6 @@ deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
-deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::134;
@@ -750,6 +749,8 @@ deny 2a12:a800:2:1:45:138:16:42;
 deny 2a12:a800:2:1:45:138:16:76;
 deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
+deny 2a12:a800:2:1:45:141:215:114;
+deny 2a12:a800:2:1:45:141:215:116;
 deny 2a12:a800:2:1:45:141:215:167;
 deny 2a12:a800:2:1:45:141:215:169;
 deny 2a12:a800:2:1:45:141:215:17;
