--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -529,7 +529,6 @@ set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
-set_real_ip_from 2a0b:f4c2:1::128;
 set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::134;
@@ -750,6 +749,8 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
+set_real_ip_from 2a12:a800:2:1:45:141:215:114;
+set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
