Update lists at 20241202-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -190,6 +190,7 @@ allow 172.81.132.94;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.227.215.50;
@@ -883,6 +884,7 @@ allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -953,6 +955,7 @@ allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -980,7 +983,6 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -1282,6 +1284,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1395,6 +1398,7 @@ allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0a:c801:1:5::57;
 allow 2a0b:4140:6c6c::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1675,6 +1679,7 @@ allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
+allow 37.48.70.156;
 allow 38.97.116.244;
 allow 45.11.229.132;
 allow 45.11.59.28;
@@ -1734,6 +1739,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.108;
 allow 45.84.107.182;
 allow 45.84.107.198;
@@ -1749,6 +1755,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
