Update lists at 20241203-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -149,6 +149,7 @@ allow 154.213.187.98;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
+allow 16.171.36.29;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -169,6 +170,10 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 171.25.193.20;
+allow 171.25.193.234;
+allow 171.25.193.235;
+allow 171.25.193.25;
 allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
@@ -620,7 +625,6 @@ allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.230;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -672,6 +676,10 @@ allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
+allow 2001:67c:289c:2::234;
+allow 2001:67c:289c:2::235;
+allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
 allow 2001:67c:289c:4::79;
@@ -1267,8 +1275,6 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
-allow 2a01:5e0:36:c311::1;
-allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1279,7 +1285,6 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:6f8:2020:206:b::230;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1708,7 +1713,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.14.165.118;
 allow 45.149.204.78;
 allow 45.151.122.34;
 allow 45.154.98.26;
@@ -1904,10 +1908,7 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
-allow 93.99.104.128;
-allow 93.99.104.18;
 allow 93.99.104.194;
-allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
