--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -149,6 +149,7 @@ set_real_ip_from 154.213.187.98;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 158.69.1.13;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 16.171.36.29;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
@@ -169,6 +170,10 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
+set_real_ip_from 171.25.193.20;
+set_real_ip_from 171.25.193.234;
+set_real_ip_from 171.25.193.235;
+set_real_ip_from 171.25.193.25;
 set_real_ip_from 171.25.193.77;
 set_real_ip_from 171.25.193.78;
 set_real_ip_from 171.25.193.79;
@@ -620,7 +625,6 @@ set_real_ip_from 195.47.238.89;
 set_real_ip_from 195.47.238.91;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
-set_real_ip_from 198.167.206.230;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -672,6 +676,10 @@ set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
+set_real_ip_from 2001:67c:289c::20;
+set_real_ip_from 2001:67c:289c:2::234;
+set_real_ip_from 2001:67c:289c:2::235;
+set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
@@ -1267,8 +1275,6 @@ set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
-set_real_ip_from 2a01:5e0:36:c311::1;
-set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1279,7 +1285,6 @@ set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:6f8:2020:206:b::230;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1708,7 +1713,6 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
-set_real_ip_from 45.14.165.118;
 set_real_ip_from 45.149.204.78;
 set_real_ip_from 45.151.122.34;
 set_real_ip_from 45.154.98.26;
@@ -1904,10 +1908,7 @@ set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
-set_real_ip_from 93.99.104.128;
-set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
-set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
