--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -26,6 +26,10 @@ deny 2001:620:20d0::24;
 deny 2001:638:301:f732::150;
 deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
+deny 2001:67c:289c::20;
+deny 2001:67c:289c:2::234;
+deny 2001:67c:289c:2::235;
+deny 2001:67c:289c::25;
 deny 2001:67c:289c:4::77;
 deny 2001:67c:289c:4::78;
 deny 2001:67c:289c:4::79;
@@ -385,8 +389,6 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
-deny 2a01:5e0:36:c311::1;
-deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
@@ -397,7 +399,6 @@ deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
-deny 2a02:6f8:2020:206:b::230;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
