--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -26,6 +26,10 @@ set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
+set_real_ip_from 2001:67c:289c::20;
+set_real_ip_from 2001:67c:289c:2::234;
+set_real_ip_from 2001:67c:289c:2::235;
+set_real_ip_from 2001:67c:289c::25;
 set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
@@ -385,8 +389,6 @@ set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
-set_real_ip_from 2a01:5e0:36:c311::1;
-set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -397,7 +399,6 @@ set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:6f8:2020:206:b::230;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
