Update lists at 20241204-0000

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -620,8 +620,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.89;
 deny 195.47.238.91;
+deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1552,9 +1552,9 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
-deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
@@ -1676,7 +1676,6 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.84.247;
 deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1730,6 +1729,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.108;
 deny 45.84.107.182;
 deny 45.84.107.198;
