Update lists at 20241204-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -496,9 +496,11 @@ allow 185.38.175.133;
 allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
+allow 185.40.4.127;
 allow 185.40.4.132;
 allow 185.40.4.149;
 allow 185.40.4.150;
+allow 185.40.4.20;
 allow 185.40.4.29;
 allow 185.40.4.38;
 allow 185.40.4.44;
@@ -1570,8 +1572,10 @@ allow 2a0d:bbc7:0:1::394;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
+allow 2a0e:4005:1002:ffff:185:40:4:127;
 allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
+allow 2a0e:4005:1002:ffff:185:40:4:20;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
@@ -1677,7 +1681,6 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
