--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -683,8 +683,10 @@ deny 2a0d:bbc7:0:1::394;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
+deny 2a0e:4005:1002:ffff:185:40:4:127;
 deny 2a0e:4005:1002:ffff:185:40:4:132;
 deny 2a0e:4005:1002:ffff:185:40:4:149;
+deny 2a0e:4005:1002:ffff:185:40:4:20;
 deny 2a0e:4005:1002:ffff:185:40:4:29;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:44;
