--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -683,8 +683,10 @@ set_real_ip_from 2a0d:bbc7:0:1::394;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:132;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:149;
+set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:20;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:29;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
