Update lists at 20241204-1800

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -504,6 +504,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:6301:0:2e1:71c8:bc7f:8f46:ab84;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
+allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0a:c801:1:5::57;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
@@ -678,7 +679,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
-allow 2a0d:bbc7:0:1::361;
 allow 2a0d:bbc7:0:1::394;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
