--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -37,6 +37,7 @@ allow 104.254.90.187;
 allow 107.172.31.218;
 allow 107.173.179.59;
 allow 107.174.138.172;
+allow 107.174.146.25;
 allow 107.174.34.30;
 allow 107.189.10.175;
 allow 107.189.11.111;
@@ -137,6 +138,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
+allow 152.53.133.14;
 allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
@@ -608,7 +610,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
-allow 193.41.226.117;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -1394,6 +1395,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:6301:0:2e1:71c8:bc7f:8f46:ab84;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
+allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0a:c801:1:5::57;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
@@ -1568,7 +1570,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
-allow 2a0d:bbc7:0:1::361;
 allow 2a0d:bbc7:0:1::394;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1682,7 +1683,7 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1738,7 +1739,6 @@ allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.21.193;
-allow 45.84.107.108;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
