--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -37,6 +37,7 @@ set_real_ip_from 104.254.90.187;
 set_real_ip_from 107.172.31.218;
 set_real_ip_from 107.173.179.59;
 set_real_ip_from 107.174.138.172;
+set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.174.34.30;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
@@ -137,6 +138,7 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 15.204.238.148;
+set_real_ip_from 152.53.133.14;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -608,7 +610,6 @@ set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
-set_real_ip_from 193.41.226.117;
 set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -1394,6 +1395,7 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:6301:0:2e1:71c8:bc7f:8f46:ab84;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
+set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0a:c801:1:5::57;
 set_real_ip_from 2a0b:4140:6c6c::2;
 set_real_ip_from 2a0b:7140:8:1:5054:ff:fe43:9f9;
@@ -1568,7 +1570,6 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
-set_real_ip_from 2a0d:bbc7:0:1::361;
 set_real_ip_from 2a0d:bbc7:0:1::394;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1682,7 +1683,7 @@ set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
-set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
@@ -1738,7 +1739,6 @@ set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.21.193;
-set_real_ip_from 45.84.107.108;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
