--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -130,6 +130,7 @@ allow 144.172.118.55;
 allow 144.172.118.73;
 allow 146.19.143.47;
 allow 146.59.126.232;
+allow 147.135.62.201;
 allow 147.45.116.145;
 allow 147.45.78.34;
 allow 148.113.152.91;
@@ -189,7 +190,6 @@ allow 172.81.132.94;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
-allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.227.215.50;
@@ -269,6 +269,7 @@ allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
+allow 185.157.161.143;
 allow 185.165.169.239;
 allow 185.165.169.42;
 allow 185.165.171.14;
@@ -951,6 +952,7 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1276,6 +1278,7 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4840:1:3::30;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1382,7 +1385,6 @@ allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0a:c801:1:5::57;
 allow 2a0b:4140:6c6c::2;
-allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1841,6 +1843,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.38.130.105;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 87.118.110.27;
