--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,6 +116,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
+allow 136.0.42.237;
 allow 136.244.111.163;
 allow 137.184.197.55;
 allow 138.59.18.110;
@@ -273,6 +274,7 @@ allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
+allow 185.157.161.143;
 allow 185.165.169.239;
 allow 185.165.169.42;
 allow 185.165.171.14;
@@ -1011,6 +1013,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:f9f3:0:2::2db;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
@@ -1271,6 +1274,8 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
+allow 2a01:5e0:36:c311::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1676,6 +1681,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1730,7 +1736,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1906,7 +1911,9 @@ allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
+allow 93.99.104.18;
 allow 93.99.104.194;
+allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
