--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -116,6 +116,7 @@ deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
+deny 136.0.42.237;
 deny 136.244.111.163;
 deny 137.184.197.55;
 deny 138.59.18.110;
@@ -273,6 +274,7 @@ deny 185.142.239.49;
 deny 185.146.232.234;
 deny 185.154.110.142;
 deny 185.154.110.17;
+deny 185.157.161.143;
 deny 185.165.169.239;
 deny 185.165.169.42;
 deny 185.165.171.14;
@@ -1011,6 +1013,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
+deny 2602:f9f3:0:2::2db;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
@@ -1271,6 +1274,8 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
+deny 2a01:5e0:36:c311::1;
+deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1676,6 +1681,7 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.247;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1730,7 +1736,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
@@ -1906,7 +1911,9 @@ deny 93.95.230.165;
 deny 93.95.231.14;
 deny 93.95.231.88;
 deny 93.99.104.128;
+deny 93.99.104.18;
 deny 93.99.104.194;
+deny 93.99.104.40;
 deny 94.102.51.15;
 deny 94.142.241.194;
 deny 94.142.244.16;
