--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -958,9 +958,7 @@ deny 23.137.253.110;
 deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
-deny 23.154.177.10;
 deny 23.154.177.11;
-deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
 deny 23.154.177.15;
@@ -989,6 +987,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
+deny 23.155.8.104;
 deny 23.173.216.67;
 deny 23.184.48.78;
 deny 23.94.211.25;
@@ -1012,6 +1011,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:f9f3:0:2::2db;
 deny 2602:fc24:12:81a6::1;
@@ -1286,6 +1286,7 @@ deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:4840:1:3::30;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -1736,7 +1737,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
@@ -1855,6 +1855,7 @@ deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.239.46.144;
 deny 84.247.165.51;
+deny 84.38.130.105;
 deny 85.239.41.130;
 deny 85.93.218.204;
 deny 87.118.110.27;
