--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -875,7 +875,6 @@ deny 204.8.96.83;
 deny 204.8.96.84;
 deny 204.8.96.85;
 deny 204.8.96.86;
-deny 204.8.96.87;
 deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
@@ -891,7 +890,6 @@ deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.37.94;
 deny 209.141.46.203;
-deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.54.203;
 deny 209.141.55.26;
@@ -1008,6 +1006,7 @@ deny 2.56.10.36;
 deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
+deny 2.59.161.67;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1262,7 +1261,6 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
-deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2620:95:4007::111;
@@ -1280,6 +1278,7 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
+deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1686,6 +1685,7 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.247;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1740,7 +1740,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
